@@ -4,5 +4,6 @@ AUX zstd-support.patch 4756 BLAKE2B cb835364cf11d018dc127e5f47f66a58fe24a2eab262
 DIST kmod-26.tar.xz 552032 BLAKE2B 3e596d06b48599bf4919346475a036b058fb18a7b19d39953e24fa943b95fdbe34a29a5062f6b4fe3510e667ae873d3b9ae03b72350fa85ddbb40ca6a7730b34 SHA512 3ca276c6fc13c2dd2220ec528b8dc4ab4edee5d2b22e16b6f945c552e51f74342c01c33a53740e6af8c893d42bd4d6f629cd8fa6e15ef8bd8da30cb003ef0865
 EBUILD kmod-26-r1.ebuild 4927 BLAKE2B d4fa16e59cc0d68402e4c00e16e60ed8359e2d5bf881d3394afa5ba145794573c52a46d683ae3bea4f2648581f88de5b7106fcabc5143de116b85ef844efff01 SHA512 8bedb0a9e32b4a4face3b42fe4cf7388d0401a3107eb4c93e004196dd851b758f537a490e10819cc45c7381442418066562dd6d7ae0b7c46f90444dd12ab47d1
 EBUILD kmod-26-r6.ebuild 5004 BLAKE2B 7b426673d0135b1ae06427a26db2fe501369aa361c3347d33cd9af2b6a0d30457948b3271527f1d1d0fb55107fbea5d58ec89dd5d46f0246b59aa9b997e0367b SHA512 be7e4b0678d3e83b6229486c84facd6374a20162022d8a69cf1108f544fd701d05bf29156002b3d784f1b8135569635fdc1fee70238897d75715f16d7428df34
-MISC ChangeLog 316 BLAKE2B ee1022a7c702a25c2178365a5286c0903796c4f66865b5458de973584b15785e58ad905d24204916b5707ff6707891608c667fe6b3eac30d7ffc1bebe63f9088 SHA512 93504255c96c5796ddc43aff45a04ecbde3bf421af9a2a91f936ee8d346a0fc3504e438773f570ae69afe21c67214e1e43d5ede6aa5c4eb662d4946a848bfc18
+EBUILD kmod-26-r7.ebuild 5059 BLAKE2B 2830ab5d0f565720989d8f5d2a7fecc8ca0bf9ed5adcf70049da79fdbd8de9bb5a2e4f0f287ee1c5096dc3c1c3f2df374b69322036f923d2e2728ac9ca7b0e39 SHA512 e5a3f97ab853da8e399492becea87c23beabfb3ad126eff893bd60cc7daf524bdcd43ddff154bcb5ba252b05de8a15d7413174333795904c81115acb52dd3dd7
+MISC ChangeLog 421 BLAKE2B bf1d5d8351ae42268577ead988deb69eb391bf89d49785b6d2309e92c1d6254d53cfb8c114898b10a59ebd3968d6c71a50a2c547bbc012747bb77ad7512b4ab6 SHA512 e85997a9ed12cec1cea707e40adf64a2a19b77ed50f000b732946dd3d73ac9b13de97eb19842cf0dc21a9e04a947cf6c77642a5073a30d72d3bfb936df3deb75
 MISC metadata.xml 540 BLAKE2B ec5ee262fe76215688d99e32778848e71de5825f488eea2219e076290e020aa86de6138ab8366d5e077d44797789a27c22fea1c64f9c6e2713cf315b4b891455 SHA512 c4f47a77dfa7bc4cbaa61744fc46c5547763b51b48521cd229ac89680325ecbf415bd9e1ce9c71982ea721d0d5c4cf3677a0f70e8dad65235f523840cd14de94
